fixing tab alignment

--- a/style/about.css
+++ b/style/about.css
@@ -494,8 +494,7 @@ body {
         height: auto;
         margin-top: 8%;
         text-align: center;
-        margin-right: -50%;
-        margin-left: 50%;
+        margin-right: 30%;
     }
 }
 @media screen and (min-width: 481px) {
@@ -547,7 +546,7 @@ body {
         text-align: center;
         font-size: 20px;
         margin-top: 8%;
-        margin-right: -55%;
+        margin-right: 0%;
     }
 }
 @media screen and (min-width: 481px) {
